- Added MariaDB database driver
- Fixed excessive CPU usage by agent on AIX
- nxshell can connect to server on non-standard port
- NXSL:
	- New methods for arrays: append, insert, pop, push, remove
	- Table methods get and set can accept column name instead of column index
	- Table row method get can accept column name instead of column index
	- Added table row method set
- Management console:
	- Improved layout of dashboard elements
	- Added option to indicate alarm severity with background color in alarm list
	- Fixed bug in folder download in file manager
	- Proper support for ANSI colors in object tools output in web UI
	- Object dragging on map disabled if user don't have write access to map object
- Fixed issues: NX-1039, NX-1166, NX-1180, NX-1194, NX-1212, NX-1214, NX-1215, NX-1236, NX-1243, NX-1244, NX-1251, NX-1253, NX-1257


*
* 2.1-RC1
*

- External tables in agent
- Script source for table DCIs
- Driver for IgniteNet devices
- Network device database (allows some device specific information to be provided without drivers)
- Server certificate's key can be stored in separate file
- Multiple CA certificates can be specified in server configuration file
- Number of samples can be configured for table thresholds
- Null value can be used as "no change" option in auto bind scripts
- Grafana integration
- Management console:
	- Node's zone name shown in alarm browser and object overview when zoning is enabled
	- Sorting option in table based charts on dashboards (to implement "Top N" style charts)
	- Full text object search
	- Agent tunnel manager view
- Fixed issues: NX-386, NX-1127, NX-1128, NX-1210, NX-1211, NX-1222, NX-1231, NX-1239, NX-1240, NX-1242 


*
* 2.1-M3
*

- Improved event correlation based on network topology
- Improved the usability of the Server Configuration, by adding descriptions and recognition for data types and possible values
- Alternative core configuration section can be set for nxagentd using -G command line option